gcp/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcc-frontend
  labels:
    app: tcc-frontend
spec:
  replicas: 1 # You can adjust the number of replicas for high availability
  selector:
    matchLabels:
      app: tcc-frontend
  template:
    metadata:
      labels:
        app: tcc-frontend
    spec:
      containers:
        - name: tcc-frontend
          image: us-central1-docker.pkg.dev/key-hope-455618-p3/tcc-erp-repo/frontend:latest
          ports:
            - containerPort: 4000
